рефакторинг 2 версия